# AgenticSolutionForE-commerceSearchEvaluation

./: .gitignore  Dockerfile  LICENSE  README.md  architecture.md  cdk_infrastructure.md  config.json  config_loader.py  configurable_readme.md  deploy.py  final_evaluation_results.json  infrastructure.md  llm_evaluator.py  main.py  prompts.md  pyproject.toml  requirements.md  requirements.txt  scraper.p-y-removed  scraper.py  setup.py  todo.md  truckpro_detailed_analysis.json  truckpro_evaluation_results.json
.claude/commands/: truckpro-eval.md
BUP/: deploy.py  llm_evaluator.py  main.py  scraper.py  test_solution.py
config-removed/: config_loader.p-y-removed  config_models.p-y-removed
docker/: Docker
docs/: architecture_summary.md  migration_guide.md  perf-vs-prod-evaluation-report.md  pull_request_template.md  readme.md  refactoring_summary.md  search-evaluation-plan.md
examples/: examples.py
llm/: inventory_utils.py  json_fixer.py  llm_evaluator.py  ollama_client.py  prompt_templates.py  ranking_utils.py  response_parser.py  result_formatter.py
scripts/: tp_search_eval.py
services/: search_classifier.py
src/: business_summary_generator.py  cli_handler.py  constants.py  debug_scraper.py  exceptions.py  inventory_analyzer.py  main.py  refactoring_summary.md  results_manager.py  search_session.py  utils.py
src/config/: config_exceptions.py  config_loader.py  config_models.py  logging_config.py
src/llm/: __init__.py  api_server.py  caching_system.py  cicd_config.yml  cli_interface.py  config.py  evaluation_engine.py  exceptions.py  inventory_analyzer.py  llm_client.py  logging_config.py  metrics.py  prompt_manager.py  response_parser.py  result_formatter.py  search_classifier.py  security_auth.py  test_framework.py  utilities.py
src/models/: data_models.py
src/scraper/: api_server.py  architecture_readme.md  cli_interface.py  config_examples.json  data_extractor.py  database_models.py  deployment_guide.md  docker_compose.txt  dockerfile.txt  element_finder.py  example_usage.py  exceptions.py  integration_example.py  metrics_monitor.py  migration_guide.md  page_interaction_handler.py  performance_benchmarks.py  project_structure.md  rate_limiter.py  requirements (1).txt  result_processor.py  scraper_facade.py  scraper_factory.py  setup.py  testing_utilities.py  utilities.py  web_driver_manager.py  web_scraper.py
src/tests/llm/: test_evaluation_engine.py
